--- a/src/main/resources/searchable-objects.properties
+++ b/src/main/resources/searchable-objects.properties
@@ -7,3 +7,9 @@ jms.activemq.name=default-search-queue
 # coma separated packages to scan for the searchable classes.
 
 com.searchable.objects.scan.packages=com.searchable.objects.demo
+
+# elastic search configuration
+elastic.cluster.http.endpoint=http://localhost:9200
+elastic.cluster.http.read.timeout.milliseconds=6000
+elastic.cluster.http.default.return.size=25
+elastic.cluster.default.index.prefix=default-index-
