1) Support for auto JMS init and destroy. 2) Support for update index advice for UpdateToIndex annotation for method and class level.

--- a/src/main/resources/searchable-objects.properties
+++ b/src/main/resources/searchable-objects.properties
@@ -3,6 +3,7 @@
 jms.activemq.host=localhost
 jms.activemq.port=61616
 jms.activemq.name=default-search-queue
+jms.activemq.auto.initialize.on.startup=true
 
 # coma separated packages to scan for the searchable classes.
 
