1) Integration testing added.

--- a/src/test/resources/searchable-objects-test.properties
+++ b/src/test/resources/searchable-objects-test.properties
@@ -2,15 +2,15 @@
 
 jms.activemq.host=localhost
 jms.activemq.port=61616
-jms.activemq.name=default-search-queue
+jms.activemq.name=default-search-test-queue
 jms.activemq.auto.initialize.on.startup=true
 
 # coma separated packages to scan for the searchable classes.
 
-com.searchable.objects.scan.packages=com.searchable.objects.demo,com.searchable.objects.main.integration
+com.searchable.objects.scan.packages=com.searchable.objects.main.integration
 
 # elastic search configuration
 elastic.cluster.http.endpoint=http://localhost:9200
 elastic.cluster.http.read.timeout.milliseconds=6000
 elastic.cluster.http.default.return.size=25
-elastic.cluster.default.index.prefix=default-index-
+elastic.cluster.default.index.prefix=default-test-index-
