--- a/src/main/resources/searchable-objects.properties
+++ b/src/main/resources/searchable-objects.properties
@@ -8,6 +8,7 @@ jms.activemq.auto.initialize.on.startup=true
 # coma separated packages to scan for the searchable classes.
 
 com.searchable.objects.scan.packages=com.searchable.objects.demo,com.searchable.objects.main.integration
+com.searchable.objects.identification.method=detach
 
 # elastic search configuration
 elastic.cluster.http.endpoint=http://localhost:9200
